| Summary: | ASTERISK-25690: Hanging up when executing connected line sub does not cause hangup | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2016-01-12 10:56:19.000-0600 | Date Closed: | 2016-01-13 15:12:26.000-0600 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Channels |
| Versions: | 11.20.0 13.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Connected line subroutines are meant to be fast and as a result there is an expectation that applications invoked will not consume frames. In the case where the channel executing the subroutine hangs up and no consumption occurs the caller of the connected line subroutine will see the hangup and stuff will work as expected. When something DOES consume frames the caller of the subroutine will continue on oblivious to the fact that the channel has been hung up while in the subroutine. | ||
| Comments: | |||